<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plano_fundo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="serif"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/titulo"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idcalcular"
        android:layout_width="161dp"
        android:layout_height="59dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="92dp"
        android:background="@color/calcular"
        android:text="@string/btCalcular"
        app:backgroundTint="@color/calcular"
        app:iconTint="@color/colorfundo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="370dp"
        android:layout_height="310dp"
        app:layout_constraintBottom_toTopOf="@+id/id_tvresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_titulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/id_cbfeijao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cbfeijao"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/id_cbleite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cbleite"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/id_cbmacar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cbmacar"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/id_cbfaro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cbfaro"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/id_cbrefri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cbrefri"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/id_cbbatata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cbbatata"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/id_tvresult"
        android:layout_width="152dp"
        android:layout_height="62dp"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:hint="0.00"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/idcalcular"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>